--- a/CSVFromSpreadsheet/Properties/launchSettings.json
+++ b/CSVFromSpreadsheet/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "CSVFromSpreadsheet": {
       "commandName": "Project",
-      "commandLineArgs": "\"C:\\Users\\hugh\\source\\repos\\BusWankersSharp\\CSVFromSpreadsheet\\Glasto 2024 Sample.xlsx\" H:\\AutoFillTexts "
+      "commandLineArgs": "\"C:\\Users\\hugh\\Downloads\\Glasto 2024 Resale v0.1.xlsx\" H:\\AutoFillTexts 4 "
     }
   }
 }
